<?xml version="1.0" encoding="utf-8"?>
<!--
  Toolbar overflow for the Dynasty Hub. Holds the history/archive views that
  do not fit the drawer, then the dynasty-level file actions. Order is
  explicit (orderInCategory) so the list reads top-down as: program tools,
  history, then save/export/exit.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="antdroid.cfbcoach.MainActivity">
    <item
        android:id="@+id/action_coach_program"
        android:orderInCategory="10"
        android:title="@string/action_coach_program"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_team_name"
        android:orderInCategory="20"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_current_team_history"
        android:orderInCategory="30"
        android:title="@string/action_current_team_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_league_history"
        android:orderInCategory="40"
        android:title="@string/action_league_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_top_25_history"
        android:orderInCategory="50"
        android:title="@string/action_top_25_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_coach_DB"
        android:orderInCategory="60"
        android:title="@string/menu_coach_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_league"
        android:orderInCategory="70"
        android:title="@string/action_save_league"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_league"
        android:orderInCategory="80"
        android:title="@string/action_export_league"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_return_main_menu"
        android:orderInCategory="90"
        android:title="@string/action_return_main_menu"
        app:showAsAction="never" />
</menu>
